crates/runtime/tests/search/snapshots/integration_models__search__cayenne-s3_vectors-no_text_engine-dataset-text_search_metadata_megascience_vector_search_sql_random_explain.snap
---
source: crates/runtime/tests/search/mod.rs
description: "SELECT subject FROM vector_search(qs, 'second', answer) order by _score desc LIMIT 4"
---
+---------------------+---------------------------------------------------------------------------------------------------------------------+
| plan_type           | plan                                                                                                                |
+---------------------+---------------------------------------------------------------------------------------------------------------------+
| logical_plan        | Projection: vector_search(qs, Utf8("second"), answer).subject                                                       |
|                     |   Sort: vector_search(qs, Utf8("second"), answer)._score DESC NULLS FIRST, fetch=4                                  |
|                     |     Projection: vector_search(qs, Utf8("second"), answer).subject, vector_search(qs, Utf8("second"), answer)._score |
|                     |       TableScan: vector_search(qs, Utf8("second"), answer) projection=[_score, subject]                             |
| physical_plan_error | External error: Acceleration not ready; loading initial data for qs                                                 |
+---------------------+---------------------------------------------------------------------------------------------------------------------+
