crates/runtime/tests/search/snapshots/integration_models__search__cayenne-s3_vectors-no_text_engine-dataset-text_search_metadata_megascience_vector_search_sql_vectors.snap
---
source: crates/runtime/tests/search/mod.rs
description: "SELECT id, answer, array_length(answer_embedding), trunc(_score, 3) as _score  FROM vector_search(qs, 'second', answer) order by _score desc, id desc LIMIT 4;"
---
"HTTP error: 400 Bad Request - Failed to execute query: External error: Acceleration not ready; loading initial data for qs"
