crates/runtime/tests/search/snapshots/integration_models__search__cayenne-s3_vectors-no_text_engine-dataset-vector_search_metadata_megascience_keywords_response.snap
---
source: crates/runtime/tests/search/mod.rs
expression: normalize_search_response(resp)
---
{
  "duration_ms": "duration_ms_val",
  "results": [
    {
}
      "_score": "0.53",
      "dataset": "spice.public.qs",
      "matches": {
        "answer": [
          "The base number is \\(\\boxed{2}\\), because \\(2^5 = 2 \\times 2 \\times 2 \\times 2 \\times 2 = 32\\)."
        ]
      },
      "primary_key": {
        "id": 1277
      }
    },
    {
      "_score": "0.50",
      "dataset": "spice.public.qs",
      "matches": {
        "answer": [
          "The even multiples of 5 between 0 and 60 are the multiples of 10: 10, 20, 30, 40, and 50. There are $\\boxed{5}$ such numbers."
        ]
      },
      "primary_key": {
        "id": 470
      }
    },
    {
      "_score": "0.50",
      "dataset": "spice.public.qs",
      "matches": {
        "answer": [
          "The number of distinct permutations of 4 distinct letters is \\(4! = 4 \\times 3 \\times 2 \\times 1 = \\boxed{24}\\)."
        ]
      },
      "primary_key": {
        "id": 458
      }
    },
    {
      "_score": "0.48",
      "dataset": "spice.public.qs",
      "matches": {
        "answer": [
          "To evaluate $12 \\times 12$, we multiply the two numbers:\n\\[ 12 \\times 12 = 144 \\]\nThus, the final answer is $\\boxed{144}$."
        ]
      },
      "primary_key": {
        "id": 42
      }
    }
  ]
}
