crates/runtime/tests/search/snapshots/integration_models__search__cayenne-s3_vectors-no_text_engine-dataset-vector_search_metadata_megascience_vector_search_sql_filters_explain.snap
---
source: crates/runtime/tests/search/mod.rs
description: "SELECT id, answer, trunc(_score, 3) as _score FROM vector_search(qs, 'secondary', answer) where subject!='math' order by _score desc, id LIMIT 4"
---
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                                                                                                                                                                                                                    |
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: _score DESC NULLS FIRST, vector_search(qs, Utf8("secondary"), answer).id ASC NULLS LAST, fetch=4                                                                                                                                                                                                                                                                                                                                  |
|               |   Projection: vector_search(qs, Utf8("secondary"), answer).id, vector_search(qs, Utf8("secondary"), answer).answer, trunc(vector_search(qs, Utf8("secondary"), answer)._score, Int64(3)) AS _score                                                                                                                                                                                                                                      |
|               |     TableScan: vector_search(qs, Utf8("secondary"), answer) projection=[_score, answer, id], full_filters=[vector_search(qs, Utf8("secondary"), answer).subject != Utf8("math")]                                                                                                                                                                                                                                                        |
| physical_plan | SortPreservingMergeExec: [_score@2 DESC, id@0 ASC NULLS LAST], fetch=4                                                                                                                                                                                                                                                                                                                                                                  |
|               |   SortExec: TopK(fetch=4), expr=[_score@2 DESC, id@0 ASC NULLS LAST], preserve_partitioning=[true]                                                                                                                                                                                                                                                                                                                                      |
|               |     ProjectionExec: expr=[id@0 as id, answer@2 as answer, trunc(_score@1, 3) as _score]                                                                                                                                                                                                                                                                                                                                                 |
|               |       HashJoinExec: mode=CollectLeft, join_type=Left, accumulator=MinMaxLeftAccumulator, on=[(id@0, id@1)], filter=subject@0 != math, projection=[id@0, _score@2, answer@3]                                                                                                                                                                                                                                                             |
|               |         CoalescePartitionsExec                                                                                                                                                                                                                                                                                                                                                                                                          |
|               |           ProjectionExec: expr=[CAST(key@1 AS Int64) as id, subject@0 as subject, 1 - distance@2 as _score]                                                                                                                                                                                                                                                                                                                             |
|               |             BytesProcessedExec                                                                                                                                                                                                                                                                                                                                                                                                          |
|               |               RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                                                                                                                                                                                                                                                                                                                      |
|               |                 S3VectorsQueryExec (INDEX_NAME_1): filter={subject:{$ne:"math"}} limit=100                                                                                                                                                                                                                                                                                                                                              |
|               |         ProjectionExec: expr=[answer@0 as answer, id@1 as id]                                                                                                                                                                                                                                                                                                                                                                           |
|               |           SchemaCastScanExec                                                                                                                                                                                                                                                                                                                                                                                                            |
|               |             CayenneAccelerationExec: snapshots_scanned=1, files_scanned=1                                                                                                                                                                                                                                                                                                                                                               |
|               |               BytesProcessedExec                                                                                                                                                                                                                                                                                                                                                                                                        |
|               |                 RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                                                                                                                                                                                                                                                                                                                    |
|               |                   DataSourceExec: file_groups={1 group: [[<NORMALIZED_PATH>/.vortex]]}, projection=[answer, id, subject], file_type=vortex, predicate: subject@6 != math AND DynamicFilter [ empty ] AND DynamicFilter [ empty ] |
|               |                                                                                                                                                                                                                                                                                                                                                                                                                                         |
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
