crates/runtime/tests/search/snapshots/integration_models__search__cayenne-s3_vectors-no_text_engine-dataset-vector_search_metadata_megascience_vector_search_sql_no_score_explain.snap
---
source: crates/runtime/tests/search/mod.rs
description: "SELECT id, answer FROM vector_search(qs, 'second', answer) order by _score desc, id LIMIT 4"
---
+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                                                                                                                                                                                                      |
+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Projection: vector_search(qs, Utf8("second"), answer).id, CAST(vector_search(qs, Utf8("second"), answer).answer AS LargeUtf8) AS answer                                                                                                                                                                                                                                                                                   |
|               |   Sort: vector_search(qs, Utf8("second"), answer)._score DESC NULLS FIRST, vector_search(qs, Utf8("second"), answer).id ASC NULLS LAST, fetch=4                                                                                                                                                                                                                                                                           |
|               |     Projection: vector_search(qs, Utf8("second"), answer).id, vector_search(qs, Utf8("second"), answer).answer, vector_search(qs, Utf8("second"), answer)._score                                                                                                                                                                                                                                                          |
|               |       TableScan: vector_search(qs, Utf8("second"), answer) projection=[_score, answer, id]                                                                                                                                                                                                                                                                                                                                |
| physical_plan | ProjectionExec: expr=[id@0 as id, CAST(answer@1 AS LargeUtf8) as answer]                                                                                                                                                                                                                                                                                                                                                  |
|               |   RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1, maintains_sort_order=true                                                                                                                                                                                                                                                                                                                         |
|               |     SortExec: TopK(fetch=4), expr=[_score@2 DESC, id@0 ASC NULLS LAST], preserve_partitioning=[false]                                                                                                                                                                                                                                                                                                                     |
|               |       CoalescePartitionsExec                                                                                                                                                                                                                                                                                                                                                                                              |
|               |         ProjectionExec: expr=[id@0 as id, CAST(answer@2 AS LargeUtf8) as answer, _score@1 as _score]                                                                                                                                                                                                                                                                                                                      |
|               |           HashJoinExec: mode=CollectLeft, join_type=Left, accumulator=MinMaxLeftAccumulator, on=[(id@0, id@1)], projection=[id@0, _score@1, answer@2]                                                                                                                                                                                                                                                                     |
|               |             CoalescePartitionsExec                                                                                                                                                                                                                                                                                                                                                                                        |
|               |               ProjectionExec: expr=[CAST(key@0 AS Int64) as id, 1 - distance@1 as _score]                                                                                                                                                                                                                                                                                                                                 |
|               |                 BytesProcessedExec                                                                                                                                                                                                                                                                                                                                                                                        |
|               |                   RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                                                                                                                                                                                                                                                                                                    |
|               |                     S3VectorsQueryExec (INDEX_NAME_1): limit=100                                                                                                                                                                                                                                                                                                                                                          |
|               |             SchemaCastScanExec                                                                                                                                                                                                                                                                                                                                                                                            |
|               |               CayenneAccelerationExec: snapshots_scanned=1, files_scanned=1                                                                                                                                                                                                                                                                                                                                               |
|               |                 BytesProcessedExec                                                                                                                                                                                                                                                                                                                                                                                        |
|               |                   RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                                                                                                                                                                                                                                                                                                    |
|               |                     DataSourceExec: file_groups={1 group: [[<NORMALIZED_PATH>/.vortex]]}, projection=[answer, id], file_type=vortex, predicate: DynamicFilter [ empty ] AND DynamicFilter [ empty ] |
|               |                                                                                                                                                                                                                                                                                                                                                                                                                           |
+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
