crates/runtime/tests/search/snapshots/integration_models__search__cayenne-s3_vectors-no_text_engine-dataset-vector_search_metadata_megascience_vector_search_sql_projection.snap
---
source: crates/runtime/tests/search/mod.rs
description: "SELECT id, answer, question, subject, trunc(_score, 3) as _score FROM vector_search(qs, 'second', answer) order by _score desc, id LIMIT 4"
---
"HTTP error: 400 Bad Request - Failed to execute query: Internal error: Assertion failed: self.dynamic_filter.is_none(): Cannot swap HashJoinExec inputs after dynamic filters have been constructed. Optimizer rules that reorder join inputs must run before optimizer rules `FilterPushdown::new_post_optimization()`."
